[project]
name = "documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-vertexai>=2.0.27",
    "langchain-openai>=0.3.27",
    "langchain-pinecone>=0.2.8",
    "streamlit>=1.46.1",
]
